test Branch Merge

--- a/index.html
+++ b/index.html
@@ -133,6 +133,8 @@ $(function(){
 		// slide.animate($(this).parents('.slide').find('> ul'), $('.slide').find('> ul > .on'));
 	});
 });
+
+// test Branch test
 </script>
 </body>
 </html>
